# ghmate

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
examples/: requirements.txt  using_dotenv.py
ghmate/: actions_commands.py  core_commands.py  github_client.py
helper_scripts/: build_and_deploy.py  build_and_deploy_package.py  deploy_to_test.py
