[metadata]
name = ghmate
version = 0.0.2
description = A Python package for interacting with the GitHub API.
long_description = file: README.md
keywords = github, api, package
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False

[options.packages.find]
exclude =
    examples
    tests
    .env
    venv

[project.urls]
Homepage = https://github.com/serityops/ghmate
Bug Tracker = https://github.com/serityops/ghmate/issues
